--- a/src/app/components/search-modal/search-modal.component.html
+++ b/src/app/components/search-modal/search-modal.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="modal-body">
     <p style="background-color:blue; color :white; font-weight: bold;">Click on User Name to select</p>
-    <div class="container">
+    <div class="tabl-responsive">
       <table class="table">
         <thead>
           <tr>
