--- a/src/app/components/search-task/search-task.component.html
+++ b/src/app/components/search-task/search-task.component.html
@@ -5,7 +5,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="container">          
+      <p style="background-color:blue; color :white; font-weight: bold;">Click on Task Name to select</p>    
+      <div class="table-responsive">          
           <table class="table">
             <thead>
               <tr>
