--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,21 @@
-<div class="container">
-  <h1>Project Manager</h1>
-  <ul class="nav nav-pills nav-justified">
-    <li class="active"><a class="nav-link" routerLink="addProject" routerLinkActive="active">Add Project</a></li>
-    <li><a class="nav-link" routerLink="addTask" routerLinkActive="active">Add Task</a></li>
-    <li><a class="nav-link" routerLink="addUser" routerLinkActive="active">Add User</a></li>
-    <li><a class="nav-link" routerLink="taskList" routerLinkActive="active">View Task</a></li>
+<h1>Project Manager</h1>
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="addProject" routerLinkActive="active">Add Project</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="addTask" routerLinkActive="active">Add Task</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="addUser" routerLinkActive="active">Add User</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="taskList" routerLinkActive="active">View Task</a>
+    </li>
   </ul>
-</div>
-<div class="container">
+</nav>
+<hr style="border: 1px solid blue" />
+<div class="p-2">
   <router-outlet></router-outlet>
 </div>
