--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -1,95 +1,91 @@
-<div class="container">
-  <form #addUserForm="ngForm" class="form-horizontal">
-    <div class="form-group">
-      <div class="col-sm-10">
-        <input type="hidden" class="form-control width200" #user_id="ngModel"
-          [(ngModel)]="projectManagementSvc.selectedUser.user_id" name="user_id" id="user_id">
-      </div>
+<form #addUserForm="ngForm" class="form-horizontal">
+  <div class="form-group">
+    <input type="hidden" class="form-control width200" #user_id="ngModel"
+      [(ngModel)]="projectManagementSvc.selectedUser.user_id" name="user_id" id="user_id">
+  </div>
+  <div class="form-group">
+    <label for="firstName">First Name:</label>
+
+    <input type="text" class="form-control" required #firstName="ngModel"
+      [(ngModel)]="projectManagementSvc.selectedUser.firstName" name="firstName" id="firstName"
+      [ngClass]="{ 'is-invalid': !isLoadingAfterUpdate && addUserForm.submitted && firstName.invalid }">
+
+    <div *ngIf="!isLoadingAfterUpdate && addUserForm.submitted && firstName.invalid" class="invalid-details">
+      <div *ngIf="firstName.errors.required">First Name is required</div>
     </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="firstName">First Name:</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control width200" required #firstName="ngModel"
-          [(ngModel)]="projectManagementSvc.selectedUser.firstName" name="firstName" id="firstName"
-          [ngClass]="{ 'is-invalid': !isLoadingAfterUpdate && addUserForm.submitted && firstName.invalid }">
-      </div>
-      <div *ngIf="!isLoadingAfterUpdate && addUserForm.submitted && firstName.invalid" class="invalid-details">
-        <div *ngIf="firstName.errors.required">First Name is required</div>
-      </div>
+  </div>
+  <div class="form-group">
+    <label for="lastName">Last Name:</label>
+    <input type="text" class="form-control" required #lastName="ngModel"
+      [(ngModel)]="projectManagementSvc.selectedUser.lastName" id="lastName" name="lastName"
+      [ngClass]="{ 'is-invalid': !isLoadingAfterUpdate && addUserForm.submitted && lastName.invalid }">
+
+    <div *ngIf="!isLoadingAfterUpdate && addUserForm.submitted && lastName.invalid" class="invalid-details">
+      <div *ngIf="lastName.errors.required">Last Name is required</div>
     </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="lastName">Last Name:</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control width200" required #lastName="ngModel"
-          [(ngModel)]="projectManagementSvc.selectedUser.lastName" id="lastName" name="lastName"
-          [ngClass]="{ 'is-invalid': !isLoadingAfterUpdate && addUserForm.submitted && lastName.invalid }">
-      </div>
-      <div *ngIf="!isLoadingAfterUpdate && addUserForm.submitted && lastName.invalid" class="invalid-details">
-        <div *ngIf="lastName.errors.required">Last Name is required</div>
-      </div>
+  </div>
+  <div class="form-group">
+    <label for="employee_id">Employee ID:</label>
+    <input type="text" class="form-control" required #employee_id="ngModel"
+      [(ngModel)]="projectManagementSvc.selectedUser.employee_id" id="employee_id" name="employee_id"
+      [ngClass]="{ 'is-invalid': !isLoadingAfterUpdate &&  addUserForm.submitted && employee_id.invalid }">
+    <div *ngIf="!isLoadingAfterUpdate && addUserForm.submitted && employee_id.invalid" class="invalid-details">
+      <div *ngIf="employee_id.errors.required">Employee ID is required</div>
     </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="employee_id">Employee ID:</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control width150" required #employee_id="ngModel"
-          [(ngModel)]="projectManagementSvc.selectedUser.employee_id" id="employee_id" name="employee_id"
-          [ngClass]="{ 'is-invalid': !isLoadingAfterUpdate &&  addUserForm.submitted && employee_id.invalid }">
-      </div>
-      <div *ngIf="!isLoadingAfterUpdate && addUserForm.submitted && employee_id.invalid" class="invalid-details">
-        <div *ngIf="employee_id.errors.required">Employee ID is required</div>
-      </div>
+  </div>
+  <div class="form-group">
+    <div class="input-group">
+      <button type="submit" class="form-control btn btn-primary"
+        (click)="onAddUserSubmit(addUserForm)">{{_submitText}}</button>
+      &nbsp;
+      <button type="reset" class="form-control btn btn-secondary">Reset</button>
     </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary" (click)="onAddUserSubmit(addUserForm)">{{_submitText}}</button>
-        &nbsp;
-        &nbsp;
-        &nbsp;
-        <button type="reset" class="btn btn-secondary">Reset</button>
-      </div>
+  </div>
+  <hr style="border: 1px solid blue" />
+  <div class="form-group">
+    <input type="text" class="form-control" id="search" name="search" placeholder="Search...">
+  </div>
+  Sort
+  <div class="form-group">
+    <div class="input-group">
+      <button type="button" class="form-control btn btn-primary" (click)="refreshUserList('firstName asc')">First
+        Name</button>
+      &nbsp;
+      <button type="button" class="form-control btn btn-primary" (click)="refreshUserList('lastName asc')">Last
+        Name</button>
+      &nbsp;
+      <button type="button" class="btn btn-primary" (click)="refreshUserList('employee_id asc')">Id</button>
     </div>
-    <hr style="border: 1px solid blue" />
-    <div>
-      <div style="float: left;">
-        <input type="text" class="form-control width150" id="search" name="search" placeholder="Search...">
-      </div>
-      <span class="left20Right20Margin">Sort</span>
-      <span class="left20Right20Margin"><button type="button" class="btn btn-primary"
-          (click)="refreshUserList('firstName asc')">First Name</button></span>
-      <span class="left20Right20Margin"><button type="button" class="btn btn-primary"
-          (click)="refreshUserList('lastName asc')">Last Name</button></span>
-      <span class="left20Right20Margin"><button type="button" class="btn btn-primary"
-          (click)="refreshUserList('employee_id asc')">Id</button></span>
-    </div>
-    <div>
-      <table class="table">
-        <tbody>
-          <tr *ngFor="let item of projectManagementSvc.usersList">
-            <td>
-              <div style="background-color: lightgrey;">
-                <table>
-                  <tr>
-                    <td>{{item.firstName}}</td>
-                  </tr>
-                  <tr>
-                    <td>{{item.lastName}}</td>
-                  </tr>
-                  <tr>
-                    <td>{{item.employee_id}}</td>
-                  </tr>
-                </table>
-              </div>
-            </td>
-            <td>
-              <button type="submit" class="btn btn-primary"
-                (click)="OnUpdateUser(item.user_id,addUserForm)">Update</button>
-              <br /><br />
-              <button type="button" class="btn btn-secondary"
-                (click)="OnDeleteUser(item.user_id, addUserForm)">Delete</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </form>
-</div>
+  </div>
+
+  <div class="table-responsive">
+    <table class="table">
+      <tbody>
+        <tr *ngFor="let item of projectManagementSvc.usersList">
+          <td>
+            <div style="background-color: lightgrey;">
+              <table>
+                <tr>
+                  <td>{{item.firstName}}</td>
+                </tr>
+                <tr>
+                  <td>{{item.lastName}}</td>
+                </tr>
+                <tr>
+                  <td>{{item.employee_id}}</td>
+                </tr>
+              </table>
+            </div>
+          </td>
+          <td>
+            <button type="submit" class="btn btn-primary"
+              (click)="OnUpdateUser(item.user_id,addUserForm)">Update</button>
+            <br /><br />
+            <button type="button" class="btn btn-secondary"
+              (click)="OnDeleteUser(item.user_id, addUserForm)">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</form>
