--- a/src/app/components/search-project/search-project.component.html
+++ b/src/app/components/search-project/search-project.component.html
@@ -4,8 +4,9 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <div class="modal-body">    
-    <div class="container">      
+  <div class="modal-body">
+      <p style="background-color:blue; color :white; font-weight: bold;">Click on Project Name to select</p>    
+    <div class="table-responsive">      
       <table class="table">
         <thead>
           <tr>
