--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -27,7 +27,7 @@
   </div>
   <div class="form-group">
     <input type="checkbox" [disabled]="isupdateRoute" id="checkParentTask" #checkParentTask ngModel
-      name="checkParentTask" (click)="onCheckedChange(checkParentTask.checked,addTaskForm)"> Parent
+      name="checkParentTask" (click)="onCheckedChange(checkParentTask.checked)"> Parent
     Task
   </div>
 
@@ -70,17 +70,13 @@
       &nbsp; <button class="form-control btn btn-primary" [disabled]="checkParentTask.checked ||isupdateRoute"
         (click)="openUserModal()">Search</button>
     </div>
-  </div>
-  <div class="form-group">
-    <button type="submit" class="form-control btn btn-primary"
-      (click)="onAddTaskSubmit(addTaskForm)">{{commandtext}}</button>
-  </div>
+  </div>  
   <div class="form-group">
     <div class="input-group">
       <button type="submit" class="form-control btn btn-primary"
-        (click)="onAddTaskSubmit(addTaskForm)">{{commandtext}}</button>
+        (click)="onAddTaskSubmit(addTaskForm.value, addTaskForm.valid)">{{commandtext}}</button>
       &nbsp;
-      <button type="button" class="form-control btn btn-secondary" (click)="resetTaskForm(addTaskForm)">Reset Task</button>
+      <button type="reset" class="form-control btn btn-secondary">Reset Task</button>
     </div>
   </div>
 
